unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/EventApi__Event_Builder_Tab__mdt.object-meta.xml
<CustomObject>
    <description>Tabs for Event Builder.</description>
    <label>Event Builder Tab</label>
    <pluralLabel>Event Builder Tabs</pluralLabel>
</CustomObject>