unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/fields/EventApi__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Apex_Class__c</fullName>
    <description>Defines the class to be executing during certain actions in event lifecycle.</description>
    <inlineHelpText>Defines the class to be executing during certain actions in event lifecycle.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>