unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/fields/EventApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Order__c</fullName>
    <description>Defines the order the tile is to be displayed in the builder.</description>
    <inlineHelpText>Defines the order the tile is to be displayed in the builder.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>