unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/fields/EventApi__Icon__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Icon__c</fullName>
    <description>The value populated in this field defines the image to be displayed for the tab&#39;s icon.</description>
    <inlineHelpText>The value populated in this field defines the image to be displayed for the tab&#39;s icon.</inlineHelpText>
    <label>Icon</label>
    <type>Url</type>
</CustomField>