unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/fields/EventApi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field enables this tab to be viewed in the event builder.</description>
    <inlineHelpText>Checking this field enables this tab to be viewed in the event builder.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>