unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/fields/EventApi__Lightning_Component__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Lightning_Component__c</fullName>
    <description>Defines the lightning component to be used for this event builder tab.</description>
    <inlineHelpText>Defines the lightning component to be used for this event builder tab.</inlineHelpText>
    <label>Lightning Component</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>