unpackaged/main/default/objects/EventApi__Event_Builder_Tab__mdt/fields/EventApi__Registration_Style__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Style__c</fullName>
    <description>This defines the type of registration used that will display this tab.</description>
    <inlineHelpText>This defines the type of registration used that will display this tab.</inlineHelpText>
    <label>Registration Style</label>
    <referenceTo>EventApi__Event_Registration_Style__mdt</referenceTo>
    <relationshipLabel>Event Builder Tabs</relationshipLabel>
    <relationshipName>Event_Builder_Tabs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>